--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="navega">
-        <nav>
+        <nav class="nav">
             <a href="index.html">Inicio</a>
             <a href="#">otros proyectos</a>
             <a href="#">cursos</a>
