portada y mi informacion

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Portafolio</title>
 </head>
+
 <body>
     <header class="navega">
         <nav class="nav">
@@ -16,7 +18,18 @@
         </nav>
     </header>
     <main class="contenido">
-
     </main>
+    <div class="mi_persona">
+        <div class="imgen"><img src="/img/chema.webp" alt="soy-yo" class="persna"></div>
+        <div class="informacion">
+            <h1>SOBRE MI</h1>
+            <p>
+                Hola soy <b>EliasDaniel</b> soy aprendiz ha desarollador web
+                Tengo 21 año, Me quiero profesionalizar en back-end, pero tambien Tengo
+                ciertas bases de front-end,puedes tener mas informacion mia en <a href="#">Sobre mi</a>
+            </p>
+        </div>
+    </div>
 </body>
+
 </html>
