--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <main class="contenido">
     </main>
     <div class="mi_persona">
-        <div class="imgen"><img src="/img/chema.webp" alt="soy-yo" class="persna"></div>
+        <div class="imgen">
+            <img src="/img/chema.webp" alt="soy-yo" class="persna">
+        </div>
         <div class="informacion">
             <h1>SOBRE MI</h1>
             <p>
@@ -29,6 +31,21 @@
                 ciertas bases de front-end,puedes tener mas informacion mia en <a href="#">Sobre mi</a>
             </p>
         </div>
+    </div>
+
+    <div class="or">
+    </div>
+
+    <div class="suscribete">
+        <form action="">
+            <label for="name">NOMBRE</label>
+            <input type="text" name="name" placeholder="nombre" class="name">
+
+            <label for="email">Correo</label>
+            <input type="email" name="email" placeholder="correo" class="correo">
+
+            <button>ENVIAR INFORME</button>
+        </form>
     </div>
 </body>
 
